sacrilegious syntax + bye stackcoin ref

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     env_file:
       - ./.env
     volumes:
-      - ./data/stackcoin.db:/app/data/stackcoin.db
+      - ./data/:/app/data/
